Ajout d'une liste de phis à traiter dans chaque bloc et début implémentation